--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@apollo/react-hooks": "^4.0.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "axios": "^0.19.2",
@@ -33,7 +33,9 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.4",
     "react-image-gallery": "^1.0.9",
+    "react-image-zoom": "^1.3.1",
     "react-infinite-scroller": "^1.2.4",
+    "react-inner-image-zoom": "^3.0.0",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
