--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "next-seo": "^4.26.0",
     "node-fetch": "^2.6.1",
     "numeral": "^2.0.6",
+    "prop-types": "^15.7.2",
     "query-string": "^6.14.0",
     "react": "17.0.1",
+    "react-compound-slider": "^3.3.1",
     "react-country-region-selector": "^3.4.0",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.4",
